--- a/index.html
+++ b/index.html
@@ -1,11 +1,186 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Curriculum</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h1>Portafolio</h1>
+    <!--NAVIGATION BAR-->
+    <nav class="navbar navbar-expand-lg mb-2">
+        <div class="container-fluid">
+          <img src="assets/img/pyr.jpg" width="60px" class="rounded-circle " alt="" srcset="">
+          <a class="navbar-brand text-light m-3" href="#">Endert Villanueva</a>
+          <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon navbar-dark"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link " id="home" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link features" href="#about">Sobre Mí</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link pricing" href="#cards">Portafolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link experience" href="#experiencia">Experiencia</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </nav>
+      <!--TARJETAS-->
+    <section class="container hero-section d-flex align-items-center justify-content-center">
+      <div class="hero-text ">
+        <h1 class="d-flex justify-content-center">Endert Villanueva</h1>
+        <h2 class="d-flex justify-content-center">Full Stack Web Developer</h2>
+      </div>
+      
+    </section>
+    <section class="container mt-4" id="about">
+      <h3>Endert Villanueva</h3>
+      <div class="row">
+        <div class="col-md-6">
+          <p>Graduado en Relaciones Industriales, mención Gerencia en RRHH. <br>Diseñador Gráfico.<br>Full Stack Web Developer.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <p>Apasionado por la tecnología. <br>Con carácter innovador y con miras al futuro y a la automatización de métodos que nos permitan avanzar en la era digital actual. </p>
+        </div>
+      </div>
+    </section>
+    <div class="container progressBar">
+      <h4 class="m-2">HTML</h4>
+      <div class="progress m-0" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 100%">
+        </div>
+      </div>
+      <h4 class="m-2">CSS</h4>
+      <div class="progress m-0" role="progressbar" aria-label="Basic example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 90%"></div>
+      </div>
+      <h4 class="m-2">Bootstrap</h4>
+      <div class="progress m-0" role="progressbar" aria-label="Basic example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 50%"></div>
+      </div>
+      <h4 class="m-2">JavaScript</h4>
+      <div class="progress m-0" role="progressbar" aria-label="Basic example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 75%"></div>
+      </div>
+      <h4 class="m-2">Node JS</h4>
+      <div class="progress m-0" role="progressbar" aria-label="Basic example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 75%"></div>
+      </div>
+    </div>
+      <section class="productos d-flex justify-content-center mt-5" id="cards">
+        <div class="container row">
+          <h3 class="text-light d-flex justify-content-center mt-5">Portafolio</h3>
+          <div class="row main justify-content-center mt-5 mb-5">
+            <!--TARJETA #1-->
+            <div class="card mb-3 mt-3 col-3 py-0 px-0 m-2" style="width: 25rem; height: 24rem;">
+              <img src="assets/img/pokedex.jpg" class="card-img-top" alt="cama">
+              <div class="card-body">
+                <h5 class="card-title">Pokedex + Pokeapi</h5>
+                <h6 class="card-title text-secondary">HTML - CSS - JavaScript</h6>
+                <h6 class="d-flex justify-content-center"><a href="https://github.com/PyrEnd/Pokedex"><button type="button" class="btn btn-danger">Visita este proyecto</button>
+                </a></h6>
+              </div>
+            </div>
+            <!--TARJETA #2-->
+            <div class="card mb-3 mt-3 col-3 py-0 px-0 m-2" style="width: 25rem; height: 24rem;">
+              <img src="assets/img/drum.jpg" class="card-img-top" alt="palta">
+              <div class="card-body">
+                <h5 class="card-title">Sitio web de lecciones de música</h5>
+                <h6 class="card-title text-secondary">HTML - CSS - JavaScript</h6>
+                <h6 class="d-flex justify-content-center"><a href="https://github.com/PyrEnd/Drumsite"><button type="button" class="btn btn-danger">Visita este proyecto</button>
+                </a></h6>
+              </div>
+            </div>
+            <!--TARJETA #3-->
+            <div class="card mb-3 mt-3 col-3 py-0 px-0 m-2" style="width: 25rem; height: 24rem;">
+              <img src="assets/img/iguana.jpg" class="card-img-top" alt="odontologia">
+              <div class="card-body">
+                <h5 class="card-title">Iguana Site</h5>
+                <h6 class="card-title text-secondary">HTML - CSS</h6>
+                <h6 class="d-flex justify-content-center"><a href="iguana.html"><button type="button" class="btn btn-danger">Visita este proyecto</button>
+                </a></h6>
+              </div>
+            </div>
+            <!--TARJETA #4-->
+            <div class="card mb-3 mt-3 col-3 py-0 px-0 m-2" style="width: 25rem; height: 24rem;">
+              <img src="assets/img/cupon.jpg" class="card-img-top" alt="colacion">
+              <div class="card-body">
+                <h5 class="card-title">Cupones para Desafío Latam</h5>
+                <h6 class="card-title text-secondary">HTML - CSS - Bootstrap</h6>
+                <h6 class="d-flex justify-content-center"><a href="https://github.com/PyrEnd/cupones"><button type="button" class="btn btn-danger">Visita este proyecto</button>
+                </a></h6>
+              </div>
+            </div>
+            <!--TARJETA #5-->
+            <div class="card mb-3 mt-3 col-3 py-0 px-0 m-2" style="width: 25rem; height: 24rem;">
+              <img src="assets/img/reloj.jpg" class="card-img-top" alt="stukids">
+              <div class="card-body">
+                <h5 class="card-title">Reloj</h5>
+                <h6 class="card-title text-secondary">HTML - CSS - JavaScript</h6>
+                <h6 class="d-flex justify-content-center"><a href="https://github.com/PyrEnd/Clock"><button type="button" class="btn btn-danger">Visita este proyecto</button>
+                </a></h6>
+              </div>
+            </div>
+            <!--TARJETA #6-->
+            <div class="card mb-3 mt-3 col-3 py-0 px-0 m-2" style="width: 25rem; height: 26rem; height: 24rem;">
+              <img src="assets/img/tarot.jpg" class="card-img-top" alt="flamingo">
+              <div class="card-body">
+                <h5 class="card-title">Tarot App</h5>
+                <h6 class="card-title text-secondary">HTML - CSS - JavaScript</h6>
+                <h6 class="d-flex justify-content-center"><a href="https://github.com/PyrEnd/Tarot"><button type="button" class="btn btn-danger">Visita este proyecto</button>
+                </a></h6>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--Fin sección de tarjetas-->
+
+      <div class="container mt-5 mb-5" id="experiencia">
+        <h3>Experiencia Laboral</h3><br>
+        <ul>
+          <li>AT&T: Representante y Consultor (2018-2023).</li>
+          <li>Supermercados Luxor: Jefe de Reclutamiento y Selección (2014-2018).</li>
+          <li>Farmacias Farmatodo: Analista de Reclutamiento y Selección (2012-2014).</li>
+          <li>Diseños AVAD: Diseñador Gráfico (2008-2010).</li>
+        </ul>
+      </div>
+
+
+      <!--FORMULARIO-->
+      <form class="bg-form p-4 mt-4">
+        <div class="mb-3">
+          <p class=" d-flex justify-content-center text-light pt-2 fs-5">Contáctame</p>
+          <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Correo Electrónico">
+        </div>
+        <div class="mb-3">
+          <input type="textarea" class="form-control" id="exampleInputPassword1" placeholder="Escribe un mensaje...">
+        </div>
+        <div class="pt-2 d-flex justify-content-center">
+          <button type="submit" class="btn btn-danger fw-medium">Enviar</button>
+        </div>
+      </form>
+      <!--FOOTER-->
+      <footer>
+        <div class="container-fluid d-flex flex-column mt-3 p-3">
+          <p class="footer-text d-flex justify-content-center text-center text-secondary fs-5">© 2023 Endert Villanueva. Todos los derechos reservados.</p>
+        </div>
+      </footer>
+    <!--    BOOTSTRAP   -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
