--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
     </nav>
       <!--TARJETAS-->
     <section class="container hero-section d-flex align-items-center justify-content-center">
-      <div class="hero-text ">
-        <h1 class="d-flex justify-content-center">Endert Villanueva</h1>
+      <div class="hero-text ">Daniel Morales</h1>
         <h2 class="d-flex justify-content-center">Full Stack Web Developer</h2>
       </div>
       
